@@ -51,6 +51,20 @@ Group: Mosh  {
    File: Download  (doc/text/Download.txt)
    }  # Group: Mosh
 
+Group: Mosh Library  {
+
+   File: Core  (no auto-title, doc/text/Core.txt)
+   File: Configuration  (lib/mosh/config.ss)
+   File: Control  (lib/mosh/control.ss)
+   File: Database independent interface  (lib/mosh/dbi.ss)
+   File: Foreign Function Interface  (lib/mosh/ffi.ss)
+   File: Pretty Printing  (lib/mosh/pp.ss)
+   File: Process  (lib/mosh/process.ss)
+   File: Unit Testing  (lib/mosh/test.ss)
+   }  # Group: Mosh Library
+
+File: SRFIs  (doc/text/srfi.txt)
+
 Group: R6RS  {
 
    File: Naming Conventions  (doc/text/Naming.txt)
@@ -77,20 +91,6 @@ Group: R6RS  {
    File: R5RS compatibility  (doc/text/r5rscompat.tex.txt)
    File: Entry format  (doc/text/entry.tex.txt)
    }  # Group: R6RS
-
-Group: Mosh Library  {
-
-   File: Core  (no auto-title, doc/text/Core.txt)
-   File: Configuration  (lib/mosh/config.ss)
-   File: Control  (lib/mosh/control.ss)
-   File: Database independent interface  (lib/mosh/dbi.ss)
-   File: Foreign Function Interface  (lib/mosh/ffi.ss)
-   File: Pretty Printing  (lib/mosh/pp.ss)
-   File: Process  (lib/mosh/process.ss)
-   File: Unit Testing  (lib/mosh/test.ss)
-   }  # Group: Mosh Library
-
-File: SRFIs  (doc/text/srfi.txt)
 
 Group: Index  {
 
